feat: 实现根据仓库动态展示commit提交记录

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CommitViewer</title>
+		<title>GithubCommitViewer</title>
 		<meta charset="utf-8"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style src="css/popup.css"></style>
 	</head>
 	<body>
-		<p>CommitViewer</p>
+		<p>GithubCommitViewer</p>
+		<p>点击前往GithubCommitViewer首页</p>
 	</body>
 </html>
