feat: popup添加跳转链接

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<p>GithubCommitViewer</p>
-		<p>点击前往GithubCommitViewer首页</p>
+		<a href="https://github.com/chubxu/CommitViewer" target="_blank">点击前往GithubCommitViewer首页</a>
 	</body>
 </html>
